[package]
name = "solana-auto-swap"
version = "0.1.0"
description = "Auto swap SPL tokens on Solana DEXs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_auto_swap"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]



[dependencies]
anyhow = '1.0.98'
anchor-lang = {version = "0.31.0", features = ["init-if-needed"]}
anchor-spl = "0.31.0"
spl-token = "8.0.0"
spl-associated-token-account = "7.0.0"
arrayref = "0.3.7"
bytemuck = "1.14.0"
raydium-amm-cpi = { git = "https://github.com/raydium-io/raydium-cpi", package = "raydium-amm-cpi", branch = "anchor-0.31.0" }

[dependencies.solana-program]
version = "2.3.0"
features = []

